use jspm as package management tool

--- a/app/index.html
+++ b/app/index.html
@@ -280,7 +280,11 @@
 
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
     <!-- build:js(app/) ../../scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
+    <script src="/jspm_packages/system.js"></script>
+    <script src="/config.js"></script>
+    <script>
+        System.import('./scripts/main.js'); //note no .js on this file
+    </script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
